# citrasense

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: cliff.toml  create-release.yml  pypi-publish.yml  pytest.yml
citrascope/: __main__.py  autotune.py  citra_scope_daemon.py  constants.py  elset_cache.py  jobs.py  preview_bus.py  reprocess.py  startup_checks.py  version.py
citrascope/analysis/: __init__.py  retention.py  task_index.py
citrascope/api/: abstract_api_client.py  citra_api_client.py  dummy_api_client.py
citrascope/astro/: __init__.py  sidereal.py
citrascope/calibration/: __init__.py  calibration_library.py  calibration_suites.py  master_builder.py
citrascope/catalogs/: apass_catalog.py
citrascope/hardware/: abstract_astro_hardware_adapter.py  config_health.py  dummy_adapter.py  probe_runner.py
citrascope/hardware/devices/: abstract_hardware_device.py  device_registry.py  moravian_bindings.py
citrascope/hardware/direct/: autofocus.py  direct_adapter.py
citrascope/hardware/indi/: indi_adapter.py
citrascope/hardware/kstars/: kstars_adapter.py
citrascope/hardware/nina/: __init__.py  nina_adapter.py  nina_event_listener.py  nina_focuser.py  survey_template.json
citrascope/location/: __init__.py  gps_fix.py  gps_monitor.py  location_service.py  twilight.py
citrascope/logging/: _citrascope_logger.py  web_log_handler.py
citrascope/processors/: artifact_writer.py  context_loader.py  processor_registry.py  processor_result.py  report_generator.py
citrascope/processors/builtin/: annotated_image_processor.py  calibration_processor.py  photometry_processor.py  plate_solver_processor.py  processor_dependencies.py  satellite_matcher_processor.py  source_extractor_processor.py
citrascope/safety/: __init__.py  cable_wrap_check.py  disk_space_check.py  hardware_safety_check.py  operator_stop_check.py  safety_monitor.py  time_health_check.py
citrascope/settings/: citrascope_settings.py  directory_manager.py  settings_file_manager.py
citrascope/tasks/: alignment_manager.py  autofocus_manager.py  base_work_queue.py  calibration_manager.py  fits_enrichment.py  homing_manager.py  imaging_queue.py  observing_session.py  processing_queue.py  runner.py  self_tasking_manager.py  upload_queue.py
citrascope/tasks/scope/: base_telescope_task.py  sidereal_telescope_task.py  static_telescope_task.py  tracking_telescope_task.py
citrascope/time/: time_monitor.py
citrascope/web/: app.py  connection_manager.py  helpers.py  models.py  preview.py  server.py  sky_enrichment.py  status_collector.py
citrascope/web/routes/: __init__.py  alignment.py  analysis.py  autofocus.py  calibration.py  camera.py  core.py  filters.py  focuser.py  jobs.py  (+5 more)
citrasense/: __main__.py  autotune.py  citrasense_daemon.py  constants.py  elset_cache.py  jobs.py  preview_bus.py  reprocess.py  startup_checks.py  version.py
citrasense/acquisition/: __init__.py  acquisition_queue.py  base_work_queue.py  processing_queue.py  upload_queue.py
citrasense/analysis/: retention.py  task_index.py
citrasense/api/: abstract_api_client.py  citra_api_client.py  dummy_api_client.py
citrasense/astro/: __init__.py  elset_types.py  sidereal.py
citrasense/calibration/: calibration_library.py  calibration_suites.py  flat_capture_backend.py  master_builder.py  nina_trained_flat_backend.py
citrasense/catalogs/: apass_catalog.py
citrasense/hardware/: abstract_astro_hardware_adapter.py  adapter_registry.py  config_health.py  dummy_adapter.py  filter_sync.py  probe_runner.py
citrasense/location/: __init__.py  gps_fix.py  gps_monitor.py  location_service.py  twilight.py
citrasense/logging/: __init__.py  _citrasense_logger.py  sensor_logger.py  web_log_handler.py
citrasense/pipelines/: __init__.py
citrasense/processors/: __init__.py  abstract_processor.py  artifact_writer.py  context_loader.py  processor_registry.py  processor_result.py  report_generator.py
citrasense/safety/: __init__.py  disk_space_check.py  hardware_safety_check.py  operator_stop_check.py  safety_monitor.py  time_health_check.py
citrasense/sensors/: __init__.py  abstract_sensor.py  bus.py  init_orchestrator.py  runtime_builder.py  sensor_manager.py  sensor_registry.py  sensor_runtime.py
citrasense/settings/: citrasense_settings.py  directory_manager.py  settings_file_manager.py
citrasense/tasks/: alignment_manager.py  autofocus_manager.py  calibration_manager.py  fits_enrichment.py  homing_manager.py  imaging_queue.py  observing_session.py  processing_queue.py  runner.py  self_tasking_manager.py  task.py  task_dispatcher.py  upload_queue.py
citrasense/time/: __init__.py  time_health.py  time_monitor.py  time_sources.py
citrasense/web/: __init__.py  app.py  connection_manager.py  helpers.py  models.py  server.py  sky_enrichment.py  status_collector.py
test-fits/: README.md
tests/e2e/: conftest.py  test_setup_wizard.py
tests/unit/: sensor_bus_helpers.py  test_abstract_adapter.py  test_alignment_manager.py  test_allsky_camera_sensor.py  test_altaz_pointing_model.py  test_annotated_image_processor.py  test_apass_catalog.py  test_apass_photometry.py  test_artifact_writer.py  test_autofocus.py  test_autofocus_manager.py  test_base_telescope_task.py  test_batch_collection_requests.py  test_cable_wrap_check.py  test_cable_wrap_sync.py  test_calibration_library.py  test_calibration_manager_flat_backend.py  test_calibration_processor.py  test_calibration_suites.py  test_calibration_upload_route.py  test_citra_api_client.py  test_config_health.py  test_context_loader.py  test_create_telescope_task.py  test_daemon_multi_sensor_init.py  test_device_dependencies.py  test_direct_camera_flat_backend.py  test_disk_space_check.py  test_dummy_api_client.py  test_elset_cache.py  test_estop_clear.py  test_evaluate_safety.py  test_fake_streaming_sensor.py  test_filter_config_persistence.py  test_filter_sync.py  test_fits_enrichment.py  test_hardware_adapter.py  test_hardware_safety_check.py  test_location.py  test_logging.py  (+63 more)
(+214 files in other folders)
